@@ -57,6 +57,8 @@ Release 2.7.0 - UNRELEASED
 
     HADOOP-10476) Bumping the findbugs version to 3.0.0. (wheat9)
 
+    HADOOP-11410. Make the rpath of libhadoop.so configurable (cmccabe)
+
   OPTIMIZATIONS
 
     HADOOP-11323. WritableComparator#compare keeps reference to byte array.
